platform/infra/cdk-out-deploy/hellodj-network.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet1/EIP"
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ],
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet1/NATGateway"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcpublicSubnet3SubnetDFEF064A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet3/Subnet"
   }
  },
  "VpcpublicSubnet3RouteTable80517A9C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/publicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet3/RouteTable"
   }
  },
  "VpcpublicSubnet3RouteTableAssociation61C43F88": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet3RouteTable80517A9C"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet3SubnetDFEF064A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet3/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet3DefaultRouteA3904BF0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet3RouteTable80517A9C"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/publicSubnet3/DefaultRoute"
   }
  },
  "VpcprivateegressSubnet1Subnet830BC88F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.16.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/private-egressSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet1/Subnet"
   }
  },
  "VpcprivateegressSubnet1RouteTable53552907": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/private-egressSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet1/RouteTable"
   }
  },
  "VpcprivateegressSubnet1RouteTableAssociationBC4FB59B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet1RouteTable53552907"
    },
    "SubnetId": {
     "Ref": "VpcprivateegressSubnet1Subnet830BC88F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivateegressSubnet1DefaultRoute8024DE89": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet1RouteTable53552907"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet1/DefaultRoute"
   }
  },
  "VpcprivateegressSubnet2SubnetEB0EA9CB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.32.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/private-egressSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet2/Subnet"
   }
  },
  "VpcprivateegressSubnet2RouteTableD35AFE98": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/private-egressSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet2/RouteTable"
   }
  },
  "VpcprivateegressSubnet2RouteTableAssociation947897EE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet2RouteTableD35AFE98"
    },
    "SubnetId": {
     "Ref": "VpcprivateegressSubnet2SubnetEB0EA9CB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet2/RouteTableAssociation"
   }
  },
  "VpcprivateegressSubnet2DefaultRouteC804F6D0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet2RouteTableD35AFE98"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet2/DefaultRoute"
   }
  },
  "VpcprivateegressSubnet3Subnet6C8E65FB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.48.0/20",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/private-egressSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet3/Subnet"
   }
  },
  "VpcprivateegressSubnet3RouteTableDE64FAB9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc/private-egressSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet3/RouteTable"
   }
  },
  "VpcprivateegressSubnet3RouteTableAssociationD6086BC6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet3RouteTableDE64FAB9"
    },
    "SubnetId": {
     "Ref": "VpcprivateegressSubnet3Subnet6C8E65FB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet3/RouteTableAssociation"
   }
  },
  "VpcprivateegressSubnet3DefaultRoute256F7FEA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet3RouteTableDE64FAB9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/private-egressSubnet3/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "hellodj-network/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/Vpc/VPCGW"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HelloDJ ALB ingress (public HTTP/S).",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTPS from the internet",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTP from the internet (redirect to HTTPS at the listener)",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/AlbSecurityGroup/Resource"
   }
  },
  "FleetSecurityGroup27D2C237": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HelloDJ EKS node/workload fleet.",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/FleetSecurityGroup/Resource"
   }
  },
  "FleetSecurityGroupfromhellodjnetworkAlbSecurityGroup71F87916102465535D4F6A788": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "App traffic from the ALB to fleet target ports",
    "FromPort": 1024,
    "GroupId": {
     "Fn::GetAtt": [
      "FleetSecurityGroup27D2C237",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 65535
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/FleetSecurityGroup/from hellodjnetworkAlbSecurityGroup71F87916:1024-65535"
   }
  },
  "FleetSecurityGroupfromhellodjnetworkFleetSecurityGroup725FA4A7ALLTRAFFICEE593F68": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Intra-fleet traffic (Lavalink/transcode/orchestrator)",
    "GroupId": {
     "Fn::GetAtt": [
      "FleetSecurityGroup27D2C237",
      "GroupId"
     ]
    },
    "IpProtocol": "-1",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FleetSecurityGroup27D2C237",
      "GroupId"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/FleetSecurityGroup/from hellodjnetworkFleetSecurityGroup725FA4A7:ALL TRAFFIC"
   }
  },
  "AppLoadBalancer0268F95E": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "AlbSecurityGroup86A59E99",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
     },
     {
      "Ref": "VpcpublicSubnet2SubnetE34B022A"
     },
     {
      "Ref": "VpcpublicSubnet3SubnetDFEF064A"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4",
    "VpcpublicSubnet2DefaultRoute732F0BEB",
    "VpcpublicSubnet2RouteTableAssociationCCE257FF",
    "VpcpublicSubnet3DefaultRouteA3904BF0",
    "VpcpublicSubnet3RouteTableAssociation61C43F88"
   ],
   "Metadata": {
    "aws:cdk:path": "hellodj-network/AppLoadBalancer/Resource"
   }
  },
  "GatewayLoadBalancer03482DCE": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "Subnets": [
     {
      "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
     },
     {
      "Ref": "VpcpublicSubnet2SubnetE34B022A"
     },
     {
      "Ref": "VpcpublicSubnet3SubnetDFEF064A"
     }
    ],
    "Type": "network"
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4",
    "VpcpublicSubnet2DefaultRoute732F0BEB",
    "VpcpublicSubnet2RouteTableAssociationCCE257FF",
    "VpcpublicSubnet3DefaultRouteA3904BF0",
    "VpcpublicSubnet3RouteTableAssociation61C43F88"
   ],
   "Metadata": {
    "aws:cdk:path": "hellodj-network/GatewayLoadBalancer/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32PwU7DMBBEv6V3xyAj9R4qVEVCJUpQr8hxlrKNa1v2OlEV5d9xUiBw4bSzb1arGcHFdsvvN3IImWq7TGPDx5qk6lhCbyMowcejU2z3bo7ljpWx0ajq2Bigma2qspHgVTYaVr6yPASrUBJa83M8i6einMdB0l4SDPLKSo99kuvjwhD4pL8Pbkm+tpxS1o8LGGI1qOiRrntvo1sy/AsKc/IQwsRAy0CotJVtI7U0Cs2pT61z51LVJfJz8h4XD/z86M9+ABqs736zaWIVBBu9Wkq+RHKRJmZsC/wc7nohuHjgYnMOiJmPhvACvLrNTxHc8gySAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "hellodj-network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "HelloDJ platform VPC id.",
   "Value": {
    "Ref": "Vpc8378EB38"
   }
  },
  "AlbDnsName": {
   "Description": "HelloDJ Application Load Balancer DNS name.",
   "Value": {
    "Fn::GetAtt": [
     "AppLoadBalancer0268F95E",
     "DNSName"
    ]
   }
  },
  "NlbDnsName": {
   "Description": "HelloDJ Network Load Balancer DNS name (gateway sockets).",
   "Value": {
    "Fn::GetAtt": [
     "GatewayLoadBalancer03482DCE",
     "DNSName"
    ]
   }
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "hellodj-network:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefVpcprivateegressSubnet1Subnet830BC88F45116193": {
   "Value": {
    "Ref": "VpcprivateegressSubnet1Subnet830BC88F"
   },
   "Export": {
    "Name": "hellodj-network:ExportsOutputRefVpcprivateegressSubnet1Subnet830BC88F45116193"
   }
  },
  "ExportsOutputRefVpcprivateegressSubnet2SubnetEB0EA9CBFD91A0CD": {
   "Value": {
    "Ref": "VpcprivateegressSubnet2SubnetEB0EA9CB"
   },
   "Export": {
    "Name": "hellodj-network:ExportsOutputRefVpcprivateegressSubnet2SubnetEB0EA9CBFD91A0CD"
   }
  },
  "ExportsOutputRefVpcprivateegressSubnet3Subnet6C8E65FBD4F775F0": {
   "Value": {
    "Ref": "VpcprivateegressSubnet3Subnet6C8E65FB"
   },
   "Export": {
    "Name": "hellodj-network:ExportsOutputRefVpcprivateegressSubnet3Subnet6C8E65FBD4F775F0"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
